--- a/Task5App/Base.lproj/Main.storyboard
+++ b/Task5App/Base.lproj/Main.storyboard
@@ -17,20 +17,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="071-Ke-a9F">
-                                <rect key="frame" x="55" y="74" width="100" height="34"/>
+                                <rect key="frame" x="86" y="74" width="70" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="SEy-Rs-6dY"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="500" constant="70" id="SEy-Rs-6dY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJo-n3-xrk">
-                                <rect key="frame" x="257" y="74" width="100" height="34"/>
+                                <rect key="frame" x="258" y="74" width="70" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="500" constant="70" id="Lam-Fr-vly"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="➗" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HcR-kH-6tj">
-                                <rect key="frame" x="186" y="81" width="40" height="21"/>
+                                <rect key="frame" x="187" y="81" width="40" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="yiO-sh-zLV"/>
                                 </constraints>
@@ -62,13 +65,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HcR-kH-6tj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="4WG-Uy-9Bs"/>
+                            <constraint firstItem="HcR-kH-6tj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="2LC-yf-o4a"/>
                             <constraint firstItem="BxG-C7-dYs" firstAttribute="top" secondItem="HcR-kH-6tj" secondAttribute="bottom" constant="43" id="6Ep-i0-xdo"/>
                             <constraint firstItem="071-Ke-a9F" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="8WA-jp-2m9"/>
+                            <constraint firstItem="HcR-kH-6tj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9I9-Rq-maX"/>
                             <constraint firstItem="BxG-C7-dYs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FtP-Z7-mZ6"/>
-                            <constraint firstItem="071-Ke-a9F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="XxS-Fi-0bQ"/>
                             <constraint firstItem="xXP-6y-sQU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="ah5-eX-Xer"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eJo-n3-xrk" secondAttribute="trailing" constant="57" id="dgK-fF-bfU"/>
                             <constraint firstItem="xXP-6y-sQU" firstAttribute="top" secondItem="BxG-C7-dYs" secondAttribute="bottom" constant="31" id="eGd-u7-l6P"/>
                             <constraint firstItem="eJo-n3-xrk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="mBN-Aa-4Ed"/>
                             <constraint firstItem="HcR-kH-6tj" firstAttribute="leading" secondItem="071-Ke-a9F" secondAttribute="trailing" constant="31" id="qIc-Fz-wzm"/>
